# dog

./: .gitignore  .ruff.toml  Dockerfile  README.md  app.py  docker-compose.yml  docker_rebuild.sh  dog.code-workspace  dog_cards.py  dog_constants.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
app/: app.py  app_flask.py  dog.code-workspace  dog_card_def.py  dog_cards.py  dog_constants.py  dog_constants_4.py  dog_constants_6.py  dog_game.py  dog_patch_cards.py  main.py
app/static/js/: dog_dispatcher.js  dog_svg.js
app/static/player2/marbles/: topng.py
app/static/player6/marbles/: renumber.py  topng.py
app/templates/: index.html  test_html_window_height.html
templates/: index.html
