[project]
name = "dog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
