[project]
name = "dog"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "ruff",
    "pylint",
]

[tool.ruff]
exclude = [
    "experiments/*",
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "_build",
]
line-length = 120
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F"]
ignore = [
    "E501", # Line too long
    "E741",
]
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.mypy]
exclude = "static/"

[tool.pylint.messages_control]
disable = [
    "C0114", # missing-module-docstring
    "C0115", # missing-class-docstring
    "C0116", # missing-function-docstring
    "C0301", # line-too-long
    "R0902", # too-many-instance-attributes
    "R0903", # too-few-public-methods
    "R0913", # too-many-arguments
    "R0917", # too-many-positional-arguments
    "W0613", # unused-argument
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
